# BossZhiPin_Job_Search

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  README_CN.md  README_EN.md  README_TECH.md  TECH.md  deepseek.py  functions.py  main.py  pyproject.toml  requirements.txt  requirements_full.txt  vectorization.py  write_response.py
.claude/skills/boss-zhipin-helper/: SKILL.md
.claude/skills/boss-zhipin-helper/evals/: evals.json
.claude/skills/boss-zhipin-helper/scripts/: check-env.sh
.claude/skills/boss-zhipin-helper/wiki/: README.md  postmortem-2026-05-13-cdp-hang.md  troubleshooting.md
.claude/skills/boss-zhipin-helper/wiki/adr/: 005-pytauri-standalone.md
.claude/skills/boss-zhipin-onboarding/: SKILL.md
.claude/skills/boss-zhipin-onboarding/evals/: evals.json
.claude/skills/boss-zhipin-onboarding/scripts/: check-env.sh  fetch-latest-app.sh
.design-sync/: NOTES.md  config.json  conventions.md  tailwind.ds.config.js
.design-sync/overrides/: source-kit.mjs
.github/workflows/: ci.yml  release.yml  rust.yml
audit/: telemetry.py
boss_tauri/: Tauri.toml  __init__.py  __main__.py
docs/: changelog.md
docs/wiki/: README.md  architecture.md  debugging-playbook.md  faq.md  troubleshooting.md
docs/wiki/adr/: 001-nodriver-over-selenium.md  002-three-providers.md  003-telemetry-separate.md  004-persistent-chrome-profile.md  005-pytauri-standalone.md
electron/: package.json
electron/src/: main.js
electron/src/renderer/: app.js  index.html  styles.css
gui/: __init__.py  env_io.py  history.py  log_bridge.py  runner.py
models/: job_matcher.py  langchain_functions.py  llm.py  openai_assistant.py  prompts.py
python/: functions.py  generate_grpc.py  grpc_server.py  job_service_pb2.py  job_service_pb2_grpc.py  requirements.txt  tech.md  write_response.py
python/proto/: job_service.proto  job_service_pb2.py  job_service_pb2_grpc.py
resume/: tech.md
scripts/: build_standalone.ps1  build_standalone.sh  dump_boss_page.py  probe_click_card.py  probe_jd_extract.py  set_version.py
src-tauri/: .taurignore  Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/boss_zhipin/: __init__.py  __main__.py  cli.py  diagnose.py  paths.py  providers.py  vectorization.py
src/boss_zhipin/audit/: __init__.py
src/boss_zhipin/gui/: __init__.py  diagnostics.py  env_io.py  events.py  i18n.py  llm_config.py  provider_config.py  resume_io.py  runner.py  updates.py
src/boss_zhipin/models/: job_matcher.py  llm.py  openai_assistant.py  prompts.py
src/boss_zhipin/tauri/: Tauri.toml  __init__.py  __main__.py
src/boss_zhipin/tauri/capabilities/: default.toml
src/boss_zhipin/tauri/frontend/: index.html
src/boss_zhipin/tauri/frontend/assets/: index-Ci4qnSmv.css  index-sINFgi6y.js
src/boss_zhipin/utils/: retry.py
src/boss_zhipin/website_oper/: finding_jobs.py  write_response.py
src/boss_zhipin_job_search.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tauri-ui/: index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
tauri-ui/src/: App.tsx  index.css  store.ts
tauri-ui/src/components/: UpdateBanner.tsx
tauri-ui/src/lib/: i18n.ts  ipc.ts
tauri-ui/src/pages/: Config.tsx  History.tsx  Run.tsx
tests/: conftest.py  test_audit.py  test_diagnostics.py  test_env_io.py  test_finding_jobs_text.py  test_i18n.py  test_job_matcher.py  test_llm.py  test_llm_config.py  test_main_helpers.py  test_paths.py  test_prompts.py  test_provider_config.py  test_resume_io.py  test_retry.py  test_runner.py  test_set_version.py  test_standalone_sync.py  test_telemetry.py  test_updates.py  test_vectorization.py
utils/: retry.py
website_oper/: finding_jobs.py  write_response.py
