[project]
name = "boss-zhipin-job-search"
version = "0.3.0"
description = "Auto-apply for jobs on Boss ZhiPin with LLM-generated cover letters."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "longsizhuo", email = "longsizhuo@gmail.com" },
]
dependencies = [
    "openai>=1.70.0",
    "packaging>=24.2",
    "python-dotenv>=1.1.0",
    "pypdf>=5.4.0",
    "chromadb>=0.6.3",
    "sentence-transformers>=3.0.0",
    "nodriver>=0.48.1",
]

[project.optional-dependencies]
# Tauri 桌面 App 才需要的额外依赖。CLI 模式（uv run main.py）不需要装。
# 安装方式：uv sync --extra tauri
tauri = [
    "pydantic>=2.0",
    "anyio>=4.0",
    "pytauri==0.8.*",
    "pytauri-wheel==0.8.*",
]

[project.scripts]
# uv run boss-zhipin 等价于 uv run python -m boss_zhipin / uv run main.py
boss-zhipin = "boss_zhipin.cli:_cli_main"

[build-system]
# Phase D-pre 改造：项目以 src/ 布局变成可安装 package，给 Phase D 用
# pytauri standalone 把整个包装进 embedded Python interpreter 准备。
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
# wheel 里必须带上 Tauri 的非 Python 文件，否则 standalone bundle（Phase D）
# 装出来 context_factory 找不到 Tauri.toml / frontend，桌面 App 直接起不来。
# editable install（uv sync）指回源码树所以感知不到——别因为本地能跑就删这段。
"boss_zhipin.tauri" = [
    "Tauri.toml",
    "capabilities/*.toml",
    "frontend/**",
]

[tool.pytest.ini_options]
# 兜底：没做 editable install（裸 venv + pip install pytest）也能跑测试。
# uv sync 流程不依赖这行，但贡献者用别的环境管理时少踩一个坑。
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
